# tauri-plugin-terminal

./: Cargo.toml  LICENSE  LICENSE-APACHE  README.md
src/: backend.rs  commands.rs  grid_types.rs  lib.rs  tests.rs
