[package]
name = "tauri-plugin-terminal"
version = "0.1.0"
edition = "2021"
description = "Terminal emulation plugin for Tauri v2 — powered by alacritty_terminal"
license = "MIT OR Apache-2.0"
authors = ["Alakazam Labs"]
repository = "https://github.com/Alakazam-211/tauri-plugin-terminal"
keywords = ["tauri", "terminal", "pty", "alacritty", "plugin"]
categories = ["gui", "command-line-interface"]
readme = "README.md"

[dependencies]
tauri = { version = "2", features = [] }
alacritty_terminal = "0.26.0-rc1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
libc = "0.2"
log = "0.4"

